--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "vue-router": "^3.4.9"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.18.9",
     "@vue/cli-plugin-babel": "^5.0.8",
     "@vue/cli-plugin-eslint": "^5.0.8",
     "@vue/cli-service": "^5.0.8",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
+    "eslint": "^8.21.0",
+    "eslint-plugin-vue": "^9.3.0",
     "serialize-javascript": "^3.1.0",
     "vue-template-compiler": "^2.6.11"
   },
@@ -33,7 +33,7 @@
     ],
     "rules": {},
     "parserOptions": {
-      "parser": "babel-eslint"
+      "parser": "@babel/eslint-parser"
     }
   },
   "postcss": {
